--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.RoomStartAndroidProject">
+        android:theme="@style/Theme.RoomStartAndroidProject"
+        android:name=".App"
+        >
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,5 +19,6 @@
             </intent-filter>
         </activity>
     </application>
+
 
 </manifest>
